--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,8 @@
   --color-spinner: #2c3e50;
 
   --color-info: #17a2b8;
+
+  --shadow-icon: rgba(0, 0, 0, 0.5);
 }
 
 [data-color-mode="dark"] {
@@ -28,6 +30,8 @@
   --color-spinner: #ffffff;
 
   --color-info: #ffffff;
+
+  --shadow-icon: hsla(0, 0%, 100%, 0.836);
 }
 
 *,
